# substrate-offchain-worker-demo

node/: Cargo.toml
pallets/example-offchain-worker/: Cargo.toml
pallets/ocw/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
